# rust-portscanner

./: .gitignore  Cargo.toml  README.md  build_appimage.sh
.github/workflows/: main.yml
src/: main.rs  scan.rs  scan.txt  tui.rs  utils.rs
