[package]
name = "portscanner"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
rayon = "1.8"
colored = "2"
ratatui = "0.26"
crossterm = "0.27"
zip = "0.6"

[package.metadata.deb]
name = "rust-portscanner"
maintainer = "Lukas Roß <contact@lukas-ross.de>"
extended-description = "Ein schneller Portscanner mit TUI, Export und mehr"
license-file = "LICENSE"
